== Version 3.0.0beta5 ==

=== Possible API compatibility issues (since v2.3.2) ===

  * Added support for PyQt5 (removed old-style signals)
  * Replaced PyQwt dependency by the new `qwt` package (pure Python reimplementation of the Qwt6 C++ library)
  * Removed "curvetype" feature (Yfx, Xfy) which is no longer supported in Qwt6

=== Bug fixes (since v2.3.2) ===

  * scaler.cpp: fixed destination rectangle ValueError test (was continuing execution instead of returning immediately)

----

== Version 2.3.2 ==

=== Possible API compatibility issues (since v2.3.1) ===

  * qthelpers.exec_image_save_dialog: reversed the first two parameters (consistency with most Qt functions and with exec_image_open_dialog) ; parent widget is now the first argument, data to be saved being the second one.

=== Bug fixes (since v2.3.1) ===

  * Building process was failing (since v2.3.1) on Windows with C compiler other than Microsoft Visual C++

=== Other changes (since v2.3.1) ===

  * io.exec_image_save_dialog: added `template` argument to support DICOM files
  * Sift:
    * Added support for writing DICOM files
    * Improved support for DICOM metadata
    * Added support for multiple images resizing
  * Updated py2exe example (switched to cxFreeze to show how it's done) following https://groups.google.com/group/guidata_guiqwt/browse_thread/thread/f8db01cf7149e964
  * Updated the build in place batch script: building on Windows with Ms Visual C++

----

== Version 2.3.1 ==

=== Bug fixes (since v2.3.0) ===

  * Fixed build failures occuring on non-Windows platforms (Issue 54)
  * Fixed requirements in README and setup.py: guiqwt v2.3 requires guidata v1.6

----

== Version 2.3.0 ==

=== New features (since v2.2.1) ===

  * Added support for Python 3: a single code source base compatible with both Python 2 and Python 3